; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_gdbstub/src/extr_gdbstub.c_handle_m_command.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_gdbstub/src/extr_gdbstub.c_handle_m_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"E01\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @handle_m_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_m_command(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = call i64 @esp_gdbstub_gethex(i8** %3, i32 -1)
  store i64 %9, i64* %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %3, align 8
  %12 = call i64 @esp_gdbstub_gethex(i8** %3, i32 -1)
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @esp_gdbstub_readmem(i64 %13)
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %2
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add nsw i64 %17, %18
  %20 = sub nsw i64 %19, 1
  %21 = call i32 @esp_gdbstub_readmem(i64 %20)
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %16, %2
  %24 = call i32 @esp_gdbstub_send_str_packet(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  br label %43

25:                                               ; preds = %16
  %26 = call i32 (...) @esp_gdbstub_send_start()
  store i32 0, i32* %7, align 4
  br label %27

27:                                               ; preds = %38, %25
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = load i64, i64* %6, align 8
  %31 = icmp slt i64 %29, %30
  br i1 %31, label %32, label %41

32:                                               ; preds = %27
  %33 = load i64, i64* %5, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %5, align 8
  %35 = call i32 @esp_gdbstub_readmem(i64 %33)
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @esp_gdbstub_send_hex(i32 %36, i32 8)
  br label %38

38:                                               ; preds = %32
  %39 = load i32, i32* %7, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %7, align 4
  br label %27

41:                                               ; preds = %27
  %42 = call i32 (...) @esp_gdbstub_send_end()
  br label %43

43:                                               ; preds = %41, %23
  ret void
}

declare dso_local i64 @esp_gdbstub_gethex(i8**, i32) #1

declare dso_local i32 @esp_gdbstub_readmem(i64) #1

declare dso_local i32 @esp_gdbstub_send_str_packet(i8*) #1

declare dso_local i32 @esp_gdbstub_send_start(...) #1

declare dso_local i32 @esp_gdbstub_send_hex(i32, i32) #1

declare dso_local i32 @esp_gdbstub_send_end(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
